Text and Image Positioning CSS 3rd

--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
 .container1 {
   border: 3px solid yellow;
-  width:50%;
+  width: 50%;
   top: 0;
   left: 25%;
   position: fixed;
 }
+
 .nba {
   text-align: center;
   color: red;
 }
+
 .warriorslogo {
   display: block;
   margin: auto;
@@ -17,9 +19,11 @@
   float: left;
   padding: 10px;
 }
+
 .teams {
-  font-size: 25px
+  font-size: 25px;
 }
+
 .nbalogo {
   width: 500px;
   height: 2000 px;
